# anto-mart

./: README.md  package.json  pnpm-lock.yaml  test.rs  vite.config.ts
src/: App.tsx  main.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/db/: .gitignore  Cargo.toml  db.rs  diesel.toml
src-tauri/db/migrations/2026-07-12-183739-0000_create_auth_and_roles/: down.sql  up.sql
src-tauri/db/migrations/2026-07-18-165312-0000_inital_inventory_subsystem/: down.sql  up.sql
src-tauri/db/migrations/2026-07-22-171420-0000_initial_purchases_subsystem/: down.sql  up.sql
src-tauri/db/src/: connection.rs  database.rs  lib.rs  schema.rs
src-tauri/db/src/entities/: inventory.rs  mod.rs  role.rs  sales.rs  user.rs
src-tauri/db/src/models/: inventory.rs  mod.rs  role.rs  sales.rs  user.rs
src-tauri/db/src/repositories/: mod.rs  product_category_repo.rs  product_repo.rs  role_repo.rs  sales_repo.rs  user_repo.rs
src-tauri/db/src/types/: mod.rs  payment_method.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  inventory.rs  mod.rs  utils.rs
src-tauri/src/db/: connection.rs  mod.rs
src-tauri/src/db/models/: mod.rs  prodcut.rs
src-tauri/src/dto/: api.rs  inventory.rs  mod.rs  user.rs
src-tauri/src/utils/: media.rs
src/bindings/: AvatarPayload.ts  CreateProductCategoryRequest.ts  CreateUserRequest.ts  LoginResponse.ts  ProductCategoryResponse.ts  Response.ts  UserResponse.ts
src/components/layout/: app-header.tsx  app-layout.tsx  app-sidebar.tsx
src/components/shared/: data-table.tsx  empty-state.tsx  stat-card.tsx  (+1 more)
src/lib/: mockData.ts  types.ts
src/pages/: Customers.tsx  Dashboard.tsx  Expenses.tsx  Inventory.tsx  Ledger.tsx  Reports.tsx  Sales.tsx  Settings.tsx  Suppliers.tsx
src/styles/: globals.css
(+1 files in other folders)
