[package]
name = "anto-mart"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[workspace]
members = [".", "migration"]

[lib]
name = "anto_mart_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
escpos = "0.17"
sea-orm = { version = "1", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
anyhow = "1"
