[package]
name = "anto-mart"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

[lib]
name = "anto_mart_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
db = { path = "db" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

serde.workspace = true
serde_json = "1"

tokio = { version = "1", features = ["full"] }

escpos = "0.17"
dirs = "5"
anyhow.workspace = true

argon2 = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }

[workspace]
members = [".", "db"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
