[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }

serde.workspace = true

thiserror = "1"
dotenv = "0.15.0"
chrono.workspace = true
anyhow.workspace = true
derive_more.workspace = true
